align fixs

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,9 +65,13 @@ body {
 }
 
 .font-harry{
-  font-size: xxx-large;  
+  font-size: xx-large;  
   color: darkgoldenrod;
 }
+
+// .md-2{
+//   margin-left: 25% !important;
+// }
 
 .byMe{
   font-size: large;
